--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -34,6 +34,11 @@ body {
             transform: scale(1.03);
             transition: 300ms;
         }
+
+        & a {
+            color: black;
+            text-decoration: none;
+        }
     }
 }
 
