--- a/assets/css/sobrenos.css
+++ b/assets/css/sobrenos.css
@@ -18,12 +18,13 @@ body{
 
 h2 {
     font-family: 'Quicksand', sans-serif;
-    font-size: 45px;
+    font-size: 30px;
+    font-weight: 200;
 
 }
 
 p, li {
-    font-family: 'Nunito', sans-serif; 
+    font-family: 'Nunito', sans-serif;
 }    
 
 
@@ -47,7 +48,8 @@ p, li {
 .titulo-sobrenos {
     text-align: center;
     font-family: 'Quicksand';
-    font-size: 35px;
+    font-size: 50px;
+    font-weight: 100;
 }
 
 .login {
@@ -105,6 +107,7 @@ p, li {
 
 .li1 {
     list-style-image: url(../img/pata-azul.png);
+    padding:0;
 }
 
 .li2 {
@@ -119,7 +122,7 @@ p, li {
 .nossa-missao {
     display: flex;
     margin-left: 150px;
-    margin-right: 40px;
+    margin-right: 50px;
 }
 
 .nosso-contato {
