--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,6 +22,7 @@ body{
 a {
     color: #1100ff;
     font-family: "Open Sans", sans-serif;
+    cursor: pointer;
 
     &:hover {
         text-decoration: underline;
