--- a/assets/css/login-cad.css
+++ b/assets/css/login-cad.css
@@ -15,17 +15,21 @@ body {
     z-index: 1;
 }
 
+form {
+    padding: .7rem;
+}
+
 .login-cad-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 10rem;
     margin: auto;
 
     & .nome-sistema {
         font-size: 2rem;
-        margin: 20px;
+        margin: 2rem;
         z-index: 1;
 
         & a {
@@ -47,51 +51,74 @@ body {
         background-color: #fffdfd;
         border-radius: 15px;
         text-align: center;
-        padding: 15px;
+        padding: 1.5rem;
         box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.705);
         z-index: 1;
         font-weight: 600;
-        margin-bottom: 50px;
+        margin-bottom: 5rem;
 
         & .titulo-login-cad {
-            margin: 15px;
+            margin: 1.5rem;
             font-size: 2rem;
         }
 
         & label {
             display: block;
             text-align: left;
-            margin: 5px;
+            margin: .5rem;
             font-size: 1.5rem;
         }
 
-        & input {
-            display: block;
-            background-color: #f1f1f1;
-            border-radius: 15px;
-            width: 100%;
-            padding: 5px 15px;
-            margin-bottom: 10px;
-            font-size: 16px;
-            box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.705);
+        .div-inputs {
+            display: flex;
+            flex-direction: column;
+            
+            & .icone-input {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                background-color: #f1f1f1;
+                font-size: 1.6rem;
+                border-radius: 30px;
+                padding: .8rem 1.5rem;
+                box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.705);
+            }
 
+            & input {
+                background-color: transparent;
+            }
+            
+            & i {
+                color: rgba(0, 0, 0, 0.3);
+                padding-right: .7rem;
+                margin-right: .7rem;
+            }
+            & .borda-i {
+                border-right: 1px solid rgba(0, 0, 0, 0.3);
+            }
+            
             &:hover {
                 transform: scale(1.03);
                 transition: 300ms;
             }
-
+        
             &:focus {
                 outline: 1px solid #1100ff;
             }
         }
 
-        & button {
-            margin-top: 25px;
-            margin-bottom: 15px;
+        & .input {
+            margin-bottom: 2rem;
             width: 100%;
-            padding: 5px;
+        }
+
+        & button {
+            margin-top: 2.5rem;
+            margin-bottom: 1.5rem;
+            width: 100%;
+            padding: .5rem;
             border-radius: 15px;
-            font-size: 16px;
+            font-size: 1.6rem;
             background-color: #93CBDB;
             box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.705);
             font-weight: 600;
@@ -110,38 +137,65 @@ body {
         & .a-login-cad {
             display: flex;
             justify-content: flex-end;
-            margin-bottom: 15px;
+            margin-bottom: 1.5rem;
         }
 
         & .p-login-cad {
-            margin: 5px;
+            margin: .5rem;
             font-family: 'Open Sans', sans-serif;
-            font-size: 12px;
+            font-size: 1.2rem;
         }
     }
 }
 
+.div-dupla {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
 .termos3{
     display: flex;
-    align-items: center;
-    margin-bottom: 3em;
+    align-items: baseline;
+    margin-bottom: 1.5em;
 
     & #termos{
         width: 15px;
         height: 15px;
-        margin-top: 13px;
-    }   
+        margin-top: 1.3rem;
+    }
+    
+    & .link-termos {
+        font-size: 1.2rem;
+    }
 }
 
-#genero{
+.pagina {
+    display: none;
+}
+
+.ativo {
     display: block;
-    background-color:#f1f1f1;
-    border-radius: 8px;
-    box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.7);
-    text-align: left;
-    padding: 5px;
-    font-size: 12px;
-    margin-bottom: 15px;
+}
+
+.cep {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: black;
+    font-size: 1.2rem;
+    margin-top: .2rem;
+
+    & i {
+        padding-left: .7rem;
+    }
+}
+
+.select{
+    background-color:transparent;
+    width: 100%;
+    appearance: none;
+    background: transparent url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"><path fill="gray" d="M7 10l5 5 5-5H7z"/></svg>') no-repeat right 10px center;
 }
 
 #particles-js {
@@ -160,6 +214,29 @@ body {
     top: 0;
     right: 0;
     z-index: 0;
+}
+
+#proximo,
+#anterior {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    color: #000;
+    margin-bottom: 2rem;
+
+    & i {
+        padding: 0 .5rem;
+    }
+}
+
+#anterior {
+    justify-content: flex-start;
+}
+
+.proximo-anterior {
+    display: flex;
+    justify-content: space-between;
 }
 
 @media (min-width: 976px) {
@@ -205,7 +282,7 @@ body {
     .login-cad-section {
         width: 70%;
         margin: auto;
-        margin-bottom: 80px;
+        margin-bottom: 8rem;
     }
 }
 
@@ -220,6 +297,11 @@ body {
     .login-cad-section {
         width: 80%;
         margin: auto;
-        margin-bottom: 50px;
+        margin-bottom: 5rem;
+    }
+
+    .div-dupla {
+        flex-direction: column;
+        gap: 0;
     }
 }
