--- a/assets/css/login-cad.css
+++ b/assets/css/login-cad.css
@@ -113,8 +113,7 @@ form {
         }
 
         & button {
-            margin-top: 2.5rem;
-            margin-bottom: 1.5rem;
+            margin: 2.5rem 0 1.5rem;
             width: 100%;
             padding: .5rem;
             border-radius: 15px;
